welcome.lessons.welcome.bat.bool2.NearTen.scala.error
nearTen:11: error: missing parameter type
		case_ 				 => return false
                ^